@@ -17,6 +17,7 @@ improvements:
 - new entry in File menu to change sensor data file
   (does the same as right-clicking on the field displaying the sensor data file)
 - add chart context menu item to auto scale chart
+- manually changed channel names are output to the sensor data file
 
 bugfixes:
 - fix wrong time format in tooltips in the data graph
